[CI] clear cache in server (#47)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,3 +90,41 @@ jobs:
         run: |
           set -euo pipefail
           python scripts/update_challenge.py
+
+      - name: Clear Redis cache on production server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            set -e
+            
+            echo "Clearing Redis cache for challenges..."
+            
+            # Clear the all_challenges cache key
+            docker exec fastapi-container redis-cli DEL all_challenges || {
+              echo "Failed to clear cache. Container might not exist or Redis might not be running."
+              exit 1
+            }
+            
+            echo "Successfully cleared all_challenges cache!"
+
+  notify:
+    name: Notify Deployment Status
+    runs-on: ubuntu-latest
+    needs: update-pset
+    if: always()
+    
+    steps:
+    - name: Notify Success
+      if: needs.update-pset.result == 'success'
+      run: |
+        echo "Challenge deployment completed successfully!"
+        
+    - name: Notify Failure
+      if: needs.update-pset.result == 'failure'
+      run: |
+        echo "Challenge deployment failed!"
+        exit 1
