--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
   update-pset:
     runs-on: ubuntu-latest
 
+    steps:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
