--- a/.github/workflows/check_duplicated_index.yml
+++ b/.github/workflows/check_duplicated_index.yml
@@ -32,7 +32,7 @@ jobs:
             for question in os.listdir(folder_path):
                 idx = question.split("_")[0]
                 questions[idx].append(question)
-                if len(questions[idx]):
+                if len(questions[idx]) > 1:
                     print(f"PR duplicated found: \n {questions[idx]}.")
                     exit(1)
         print("✅ All indexes are unique.")
